welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: value - is not a member of Array[Int]
  for (i <- 0 to nums - 1 - 2)
                      ^