welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {  
  for (i <- 0 to nums - 1 - 2)
  	if (nums(i) == nums(i + 1) && nums(i + 1) == nums(1 + 2))
  		return false
  
  return true
}